# ring-db

./: AGENT.md  Cargo.toml  README.md  release.sh  release_tag.sh
.github/workflows/: publish.yml
benches/: query_backends.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: cli.rs
src/: config.rs  engine.rs  error.rs  lib.rs  payload.rs  persist.rs  quant.rs  query.rs
src/backend/: cpu.rs  cuda.rs  mod.rs  wgpu_backend.rs
src/gpu/: ring_search_f32.wgsl  ring_search_q8.wgsl
src/payload/: mod.rs  pod.rs  serde.rs  traits.rs
tests/: correctness.rs  parity.rs  quantization.rs  random.rs
