[package]
name = "ring-db"
version = "0.1.0"
edition = "2024"

[lib]
name = "ringdb"
path = "src/lib.rs"

[[example]]
name = "cli"
path = "examples/cli.rs"

[[bench]]
name = "query_backends"
path = "benches/query_backends.rs"
harness = false

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
wgpu = "24"
pollster = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "4", features = ["derive"] }

[dependencies.cudarc]
version = "0.11"
optional = true
