[package]
name = "ring-db"
version = "0.3.0"
edition = "2024"
description = "A Rust library for ring queries in high-dimensional vector spaces."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mathias-vandaele/ring-db"
documentation = "https://docs.rs/ring-db"

[lib]
name = "ringdb"
path = "src/lib.rs"

[[example]]
name = "cli"
path = "examples/cli.rs"

[[bench]]
name = "query_backends"
path = "benches/query_backends.rs"
harness = false

[dependencies]
rayon = "1.11.0"
thiserror = "2"
memmap2 = "0.9"
bincode = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "4", features = ["derive"] }