[package]
name = "ring-db-derive"
version = "0.4.0"
edition = "2024"
description = "Procedural macros for ring-db."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mathias-vandaele/ring-db"

[lib]
proc-macro = true

[dependencies]
syn  = { version = "2", features = ["full"] }
quote = "1"